--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 .env.local
 node_modules
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
